# ttk-card-generator

./: .gitignore  Cargo.toml  assets.json  characters.json  config.json  styles.json  temp_config.json
docs/: README.md  _sidebar.md  characters.md  glossary.md  index.html  info.md  wording.md
src/: card.rs  character.rs  config.rs  font.rs  main.rs  render.rs  text.rs
src/card/: layout.rs  operations.rs  resize.rs
src/card/operations/: resize.rs  text_box.rs
src/text/: parser.rs
text_render/: Cargo.toml
text_render/src/: lib.rs  render.rs  text.rs
text_render/src/text/: parser.rs  types.rs
