[package]
name = "tkk_card_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
rusttype = "0.9.3"
log = "0.4.19"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0"
text_render = { path = "./text_render" }